Overflow play button bug fixed.

--- a/app/assets/stylesheets/points/_markers.css.sass
+++ b/app/assets/stylesheets/points/_markers.css.sass
@@ -26,7 +26,6 @@
   padding-top: 28px
 .points-wrap
   position: relative
-  overflow: hidden
   height: 415px
 
 .points-motto
@@ -60,7 +59,8 @@
   left: 240px
   top: 0
   .b_markers-list
-    background: inline("markers-list-background.png") 0 0 no-repeat #131313
+    background: inline("markers-list-background.png") 0 0 no-repeat
+    background-size: 100% 391px
 
 .points-markers-list
   width: 80px
